--- a/app/views/errors/500.ejs
+++ b/app/views/errors/500.ejs
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-    <title>404 Not Found</title>
+    <title>Erro 500 - Internal Server Error</title>
 
     <style>
       /*
@@ -132,7 +132,7 @@
       </header>
 
       <main role="main" class="inner cover">
-            <h1 class="cover-heading">Route Not Found</h1>
+            <h1 class="cover-heading">Internal Server Error</h1>
             <p class="lead">
                 Whoops, Something Went Wrong...
             </p>
